config/istio/traffic-rules/authservice-50-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentication-service
spec:
  hosts:
    - authentication-service
  http:
  - route:
    - destination:
        host: authentication-service
        subset: stable
      weight: 50
    - destination:
        host: authentication-service
        subset: canary
      weight: 50
