config/istio/traffic-rules/webspa-100stable.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webui-svc
spec:
  hosts:
    - webui-svc
  precedent: 1
  http:
  - route:
    - destination:
        host: webui-svc
        subset: stable
