config/istio/traffic-rules/webspa-80stable-20canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webui-svc
spec:
  hosts:
    - webui-svc
  http:
  - route:
    - destination:
        host: webui-svc
        subset: stable
      weight: 80
    - destination:
        host: webui-svc
        subset: canary
      weight: 20
